# Otimiza-Down-Johnes-Paralelizado

./: .gitignore  README.md  fetchdata.py  main.py
extra-scripts/: collect-down-johnes.py
sharpe-calculator/: CHANGELOG.md  README.md  results.txt  sharpe-calculator.cabal
sharpe-calculator/results/: sharpeRatios.csv
sharpe-calculator/src/: Loader.hs  Main.hs  Simulate.hs
