cabal-version:       2.2

name:                sharpe-calculator
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/sharpe-calculator#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
                     
library
  hs-source-dirs:      src
  exposed-modules:     Loader, Simulate
  build-depends:       base, directory, random, parallel, cassava, vector, bytestring

executable sharpe-calculator
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, directory, random, parallel, cassava >= 0.5.3.0, vector, bytestring
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded 
                       -rtsopts
                       -with-rtsopts=-N
  other-modules:       Loader, Simulate